--- a/extension/ui/pages/options.html
+++ b/extension/ui/pages/options.html
@@ -193,6 +193,26 @@
 				<input type="radio" id="saveToFilesystemInput" name="destinationInput">
 			</div>
 			<div class="option">
+				<label for="saveToGitHubInput" id="saveToGitHubLabel"></label>
+				<input type="radio" id="saveToGitHubInput" name="destinationInput">
+			</div>
+			<div class="option second-level">
+				<label for="githubTokenInput" id="githubTokenLabel"></label>
+				<input type="text" id="githubTokenInput" class="medium-input">
+			</div>
+			<div class="option second-level">
+				<label for="githubUserInput" id="githubUserLabel"></label>
+				<input type="text" id="githubUserInput" class="medium-input">
+			</div>
+			<div class="option second-level">
+				<label for="githubRepositoryInput" id="githubRepositoryLabel"></label>
+				<input type="text" id="githubRepositoryInput" class="medium-input">
+			</div>
+			<div class="option second-level">
+				<label for="githubBranchInput" id="githubBranchLabel"></label>
+				<input type="text" id="githubBranchInput" class="medium-input">
+			</div>
+			<div class="option">
 				<label for="saveToGDriveInput" id="saveToGDriveLabel"></label>
 				<input type="radio" id="saveToGDriveInput" name="destinationInput">
 			</div>
