--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -686,6 +686,8 @@
 							href="https://github.com/frostblazergit">GitHub profile</a>)</li>
 					<li>German translation done by womotroll (<a href="https://github.com/womotroll">GitHub
 							profile</a>), bannmann (<a href="https://github.com/bannmann">GitHub profile</a>) </li>
+					<li>Italian translation done by Fastbyte01 (<a href="https://github.com/Fastbyte01"
+							target="_blank">GitHub profile</a>)</li>
 					<li>Japanese translation, done by Shitennouji （四天王寺) (<a
 							href="https://github.com/Shitennouji">GitHub profile</a>)</li>
 					<li>Polish translation done by xesarni (<a href="https://github.com/xesarni">GitHub profile</a>)
