--- a/extension/ui/pages/help.html
+++ b/extension/ui/pages/help.html
@@ -703,26 +703,34 @@
 			</li>
 			<li><a id="contributors">Contributors</a>
 				<ul>
-					<li>Chinese translation done by yfdyh000 (<a href="https://github.com/yfdyh000">GitHub profile</a>),
-						KrasnayaPloshchad (<a href="https://github.com/KrasnayaPloshchad">GitHub profile</a>),
-						frostblazergit (<a href="https://github.com/frostblazergit">GitHub profile</a>), NightSharp (<a
-							href="https://github.com/NightSharp">GitHub profile</a>)</li>
+					<li>Chinese translation done by yfdyh000 (<a href="https://github.com/yfdyh000"
+							target="_blank">GitHub profile</a>), KrasnayaPloshchad (<a
+							href="https://github.com/KrasnayaPloshchad" target="_blank">GitHub
+							profile</a>), frostblazergit (<a href="https://github.com/frostblazergit"
+							target="_blank">GitHub profile</a>), NightSharp (<a href="https://github.com/NightSharp"
+							target="_blank">GitHub profile</a>), lqzhgood (<a href="https://github.com/lqzhgood"
+							target="_blank">GitHub profile</a>) </li>
 					<li>Traditional Chinese translation done by frostblazergit (<a
-							href="https://github.com/frostblazergit">GitHub profile</a>)</li>
-					<li>German translation done by womotroll (<a href="https://github.com/womotroll">GitHub
-							profile</a>), bannmann (<a href="https://github.com/bannmann">GitHub profile</a>) </li>
+							href="https://github.com/frostblazergit" target="_blank">GitHub profile</a>), lqzhgood (<a
+							href="https://github.com/lqzhgood" target="_blank">GitHub profile</a>)</li>
+					<li>German translation done by womotroll (<a href="https://github.com/womotroll"
+							target="_blank">GitHub profile</a>), bannmann (<a href="https://github.com/bannmann"
+							target="_blank">GitHub profile</a>) </li>
 					<li>Italian translation done by Fastbyte01 (<a href="https://github.com/Fastbyte01"
 							target="_blank">GitHub profile</a>)</li>
-					<li>Japanese translation, done by Shitennouji （四天王寺) (<a
-							href="https://github.com/Shitennouji">GitHub profile</a>)</li>
-					<li>Polish translation done by xesarni (<a href="https://github.com/xesarni">GitHub profile</a>)
+					<li>Japanese translation, done by Shitennouji （四天王寺) (<a href="https://github.com/Shitennouji"
+							target="_blank">GitHub profile</a>)</li>
+					<li>Polish translation done by xesarni (<a href="https://github.com/xesarni" target="_blank">GitHub
+							profile</a>)
 					</li>
-					<li>Russian translation done by rstp14 (<a href="https://github.com/rstp14">GitHub profile</a>),
-						kramola-RU (<a href="https://github.com/kramola-RU">GitHub profile</a>), solokot (<a
-							href="https://github.com/solokot">GitHub profile</a>)</li>
-					<li>Ukrainian translation done by perdolka (<a href="https://github.com/perdolka">GitHub
+					<li>Russian translation done by rstp14 (<a href="https://github.com/rstp14" target="_blank">GitHub
+							profile</a>), kramola-RU (<a href="https://github.com/kramola-RU" target="_blank">GitHub
+							profile</a>), solokot (<a href="https://github.com/solokot" target="_blank">GitHub
 							profile</a>)</li>
-					<li>Spanish translation done by strel (<a href="https://github.com/strel">GitHub profile</a>)</li>
+					<li>Ukrainian translation done by perdolka (<a href="https://github.com/perdolka"
+							target="_blank">GitHub profile</a>)</li>
+					<li>Spanish translation done by strel (<a href="https://github.com/strel" target="_blank">GitHub
+							profile</a>)</li>
 				</ul>
 			</li>
 			<li><a id="icons">Icons</a>
