--- a/src/extension/core/bg/background.html
+++ b/src/extension/core/bg/background.html
@@ -9,6 +9,7 @@
 <body>
 	<script src="/lib/chrome-browser-polyfill.js"></script>
 	<script src="/lib/extension-background.js"></script>
+	<script src="/lib/yabson.js"></script>
 	<script src="/lib/single-file.js"></script>
 	<script src="/lib/infobar.js"></script>	
 </body>
