add annotation editor

--- a/src/extension/ui/pages/options.html
+++ b/src/extension/ui/pages/options.html
@@ -236,6 +236,35 @@
 			</div>
 		</details>
 		<details>
+			<summary id="editorLabel"></summary>
+			<div class="option">
+				<label for="defaultEditorModeInput" id="defaultEditorModeLabel"></label>
+				<select id="defaultEditorModeInput">
+					<option id="defaultEditorModeNormalLabel" value="normal"></option>
+					<option id="defaultEditorModeEditLabel" value="edit"></option>
+					<option id="defaultEditorModeFormatLabel" value="format"></option>
+					<option id="defaultEditorModeCutLabel" value="cut"></option>
+					<option id="defaultEditorModeCutExternalLabel" value="cut-external"></option>
+				</select>
+			</div>
+			<div class="option">
+				<label for="applySystemThemeInput" id="applySystemThemeLabel"></label>
+				<input type="checkbox" id="applySystemThemeInput">
+			</div>
+			<div class="option">
+				<label for="warnUnsavedPageInput" id="warnUnsavedPageLabel"></label>
+				<input type="checkbox" id="warnUnsavedPageInput">
+			</div>
+			<div class="option">
+				<label for="openEditorInput" id="openEditorLabel"></label>
+				<input type="checkbox" id="openEditorInput">
+			</div>
+			<div class="option">
+				<label for="autoOpenEditorInput" id="autoOpenEditorLabel"></label>
+				<input type="checkbox" id="autoOpenEditorInput">
+			</div>
+		</details>
+		<details>
 			<summary id="bookmarksLabel"></summary>
 			<div class="option">
 				<label for="saveCreatedBookmarksInput" id="saveCreatedBookmarksLabel"></label>
