--- a/src/extension/ui/pages/help.html
+++ b/src/extension/ui/pages/help.html
@@ -15,9 +15,10 @@
 			<h2>SingleFileZ</h2>
 			<h4>Save a complete page into a single self-extracting HTML/ZIP file</h4>
 		</div> <span id="index"> <a href="#getting-started">Getting started</a> - <a href="#general-notes">Additional
-				notes</a> - <a href="#options">Options description</a> - <a href="#notes">Technical notes</a> - <a
-				href="#template-variables">Template variables</a> - <a href="#known-issues">Known issues</a> - <a
-				href="#unknown-issues">Troubleshooting unknown issues</a> - <a href="#contributors">Contributors</a>
+				notes</a> - <a href="#options">Options description</a> - <a href="#annotation-editor">Annotation
+				editor</a> - <a href="#notes">Technical notes</a> - <a href="#template-variables">Template variables</a>
+			- <a href="#known-issues">Known issues</a> - <a href="#unknown-issues">Troubleshooting unknown issues</a> -
+			<a href="#contributors">Contributors</a>
 		</span>
 		<hr>
 		<ol>
@@ -53,6 +54,9 @@
 							<li>or all the tabs.</li>
 						</ul>
 					</li>
+					<li>You can highlight text, add notes, format and remove content before saving the page with the <a
+							href="#annotation-editor">Annotation editor</a> by selecting "Annotate and save the page..."
+						in the context menu</li>
 					<li>With auto-save active, pages are automatically saved every time after being loaded (or before
 						being unloaded if not). </li>
 					<li>Select "Save Selection" from the context menu without selecting any content first to display a
@@ -74,16 +78,16 @@
 				<ul>
 					<li>
 						<p>A profile is a set of user-defined options associated to a unique name.</p>
-						<p> The drop-down list in the upper right of the options page allows you to select a profile and
+						<p>The drop-down list in the upper right of the options page allows you to select a profile and
 							modify the associated options. The buttons next to the drop-down list allows you
 							respectively to create, delete and rename a profile. </p>
 					</li>
 					<li>
-						<p> You can select the default profile through the context menu of SingleFileZ. The selection is
+						<p>You can select the default profile through the context menu of SingleFileZ. The selection is
 							persistent and applied to all tabs. </p>
 					</li>
 					<li>
-						<p> You can also override the default profile by associating a profile to a complete or partial
+						<p>You can also override the default profile by associating a profile to a complete or partial
 							URL. See the description of the <a href="#auto-settings-rules">Auto-settings rules</a>
 							feature for more info. </p>
 					</li>
@@ -130,10 +134,9 @@
 						<p>Check this option to display a prompt dialog in order to confirm the infobar content before
 							saving the page. </p>
 					</li>
-					<li data-options-label="autoCloseLabel"> <span class="option">Option: auto-close the tab after
-							the page is saved</span>
-						<p>Check this option to automatically close the tab after saving the page displayed inside.
-						</p>
+					<li data-options-label="autoCloseLabel"> <span class="option">Option: auto-close the tab after the
+							page is saved</span>
+						<p>Check this option to automatically close the tab after saving the page displayed inside. </p>
 					</li>
 				</ul>
 				<p>File name</p>
@@ -228,8 +231,9 @@
 					</li>
 					<li data-options-label="includeInfobarLabel"> <span class="option"></span>Option: include infobar in
 						the saved page</span>
-						<p>Check this option to display the ℹ button at the top right of the page when viewing a saved
-							page in a browser where SingleFileZ is not installed.</p>
+						<p>Check this
+							option to display the ℹ button at the top right of the page when viewing a saved page in a
+							browser where SingleFileZ is not installed.</p>
 					</li>
 					<li data-options-label="saveRawPageLabel"> <span class="option">Option: save raw page</span>
 						<p>Check this option to save the raw HTML file that the browser received. When this option is
@@ -289,12 +293,11 @@
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 					<li data-options-label="moveStylesInHeadLabel"> <span class="option">Option: move in the head
-							element the styles outside of it</span>
+							element the styles found outside of it</span>
 						<p>
 							Check this option to move all the style elements found outside the head element into the
 							head element. This can be useful to avoid a FOUC ("flash of unstyled content") when
-							displaying a saved page.
-						</p>
+							displaying a saved page.</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 				</ul>
@@ -317,8 +320,7 @@
 					<li data-options-label="loadDeferredImagesKeepZoomLevelLabel"> <span class="option">Option: zoom out
 							the page</span>
 						<p>Check this option to save the entire content of a page by zooming out the page. This can help
-							saving pages using infinite virtual lists for example.
-						</p>
+							saving pages using infinite virtual lists for example. </p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 					<li data-options-label="removeAlternativeImagesLabel"> <span class="option">Option: remove images
@@ -406,6 +408,49 @@
 						<p>The permissions requested by SingleFileZ allow it to access only to the files and folders it
 							has created. When you uncheck this option, SingleFileZ revokes automatically its access to
 							your Google Drive account. </p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
+					</li>
+				</ul>
+				<p>Annotation editor</p>
+				<ul>
+					<li data-options-label="defaultEditorModeLabel"> <span class="option">Option: default mode</span>
+						<p>Select the default mode when opening the annotation editor. The available choices are:
+						<ul>
+							<li><code>normal</code>: default value</li>
+							<li><code>edit the page</code>: enable the button <img
+									src="../resources/button_note_edit.png" class="icon button"></li>
+							<li><code>format the page</code>: enable the button <img
+									src="../resources/button_note_format.png" class="icon button"> if the page can be
+								formatted</li>
+							<li><code>remove elements</code>: enable the button <img
+									src="../resources/button_cut_inner.png" class="icon button"></li>
+							<li><code>remove external elements</code>: enable the button <img
+									src="../resources/button_cut_outer.png" class="icon button"></li>
+						</ul>
+						</p>
+					</li>
+					<li data-options-label="applySystemThemeLabel"> <span class="option">Option: apply the system theme
+							when formatting a page in the annotation editor</span>
+						<p>Uncheck this option if you do not want to apply the theme of the operating system or the
+							browser (e.g. dark or light) when you click on the button "Format the page for better
+							readability" in the annotation editor.</p>
+					</li>
+					<li data-options-label="warnUnsavedPageLabel"> <span class="option">Option: warn if leaving page
+							with unsaved changes</span>
+						<p>Check this option to display a blocking popup when you leave the annotation editor (e.g.
+							close the tab) without saving the changes.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
+					</li>
+					<li data-options-label="openEditorLabel"> <span class="option">Option: edit page before
+							saving</span>
+						<p>Check this option to open the annotation editor before saving any page. Checking this option
+							removes the entry "Annotate and save the page..." from the context menu.</p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
+					</li>
+					<li data-options-label="autoOpenEditorLabel"> <span class="option">Option: open the annotation
+							editor when viewing a page saved with SingleFileZ </span>
+						<p>Check this option to open the annotation editor when displaying a page saved by SingleFileZ.
+						</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 				</ul>
@@ -516,12 +561,12 @@
 				</ul>
 				<p id="auto-settings-rules">Auto-settings rules</p>
 				<ul>
-					<li> The auto-settings rules let you associate a complete or partial URL with a profile. It also
+					<li>The auto-settings rules let you associate a complete or partial URL with a profile. It also
 						allows to associate a specific profile for the auto-save, or to disable it (check "display
 						'Auto-save profile' column"). When two or more rules match a URL of a page to save, the rule
 						with the longest URL will be chosen. The special profile "-" means the current profile. </li>
-					<li> You can use the special value "*" as URL to create a rule that applies to all URLs</li>
-					<li> You can use regular expressions by prefixing the URL with "regexp:" (e.g. "regexp:.*\.com" to
+					<li>You can use the special value "*" as URL to create a rule that applies to all URLs</li>
+					<li>You can use regular expressions by prefixing the URL with "regexp:" (e.g. "regexp:.*\.com" to
 						match all URLs containing ".com"). When zero or more rules based on URLs and one or more rules
 						based on regular expressions match a URL, the longest rule based on regular expression will be
 						chosen. </li>
@@ -535,6 +580,64 @@
 					<li><span class="option">Reset</span>
 						<p>Reset all options to their default values.</p>
 					</li>
+				</ul>
+			</li>
+			<li><a id="annotation-editor">Annotation editor</a>
+				<p>The annotation editor can be opened by selecting "Annotate and save the page" in the context menu or
+					by enabling the option "Annotation editor &gt; edit page before saving". It allows you to:
+				<ul>
+					<li>add notes by clicking one of these buttons: <img src="../resources/button_note_yellow.png"
+							class="icon button"> <img src="../resources/button_note_pink.png" class="icon button"> <img
+							src="../resources/button_note_blue.png" class="icon button"> <img
+							src="../resources/button_note_green.png" class="icon button"></li>
+					<li>hide or show notes by clicking the button <img src="../resources/button_note_visible.png"
+							class="icon button"></li>
+					<li>highlight text by clicking one of these buttons: <img
+							src="../resources/button_highlighter_yellow.png" class="icon button"> <img
+							src="../resources/button_highlighter_pink.png" class="icon button"> <img
+							src="../resources/button_highlighter_blue.png" class="icon button"> <img
+							src="../resources/button_highlighter_green.png" class="icon button"></li>
+					<li>hide or show highlighted text by clicking the button <img
+							src="../resources/button_highlighter_visible.png" class="icon button"></li>
+					<li>remove text highlighting by clicking the button <img
+							src="../resources/button_highlighter_delete.png" class="icon button"></li>
+					<li>edit the page by clicking the button <img src="../resources/button_note_edit.png"
+							class="icon button"> </li>
+					<li>format the page to improve readability (when possible) by clicking the button <img
+							src="../resources/button_note_format.png" class="icon button"> </li>
+					<li>remove contents by clicking the button <img src="../resources/button_cut_inner.png"
+							class="icon button"> (inner elements) or <img src="../resources/button_cut_outer.png"
+							class="icon button"> (outer elements)</li>
+					<li>undo removes by clicking the button <img src="../resources/button_undo_cut.png"
+							class="icon button"> or the button <img src="../resources/button_undo_all_cut.png"
+							class="icon button"> (undo all)
+					<li>redo removes by clicking the button <img src="../resources/button_redo_cut.png"
+							class="icon button"></li>
+					<li>print the page by clicking the button <img src="../resources/button_print.png"
+							class="icon button"> or by pressing <code>Ctrl-P</code></li>
+					<li>save the page by clicking the button <img src="../resources/button_download.png"
+							class="icon button"> or by pressing <code>Ctrl-S</code></li>
+				</ul>
+				</p>
+				<br>
+				<p>
+					You can use the following keyboard shortcuts when removing contents with <img
+						src="../resources/button_cut_inner.png" class="icon button"> or <img
+						src="../resources/button_cut_outer.png" class="icon button">:
+				<ul>
+					<li><code>Tab</code>: expand the selection</li>
+					<li><code>Shift-Tab</code>: reduce the selection</li>
+					<li><code>Space</code>: remove the selected element</li>
+					<li><code>Ctrl-Z</code>: undo the last removal</li>
+					<li><code>Ctrl-Shift-Z</code>: redo the last removal</li>
+					<li><code>Ctrl</code>: select/unselect multiple elements, releasing the <code>Ctrl</code> key
+						validates the selection</li>
+					<li><code>Shift</code>: temporarily reverse the type of removal (i.e. removal of inner elements or
+						removal of outer elements) on the last selected element and reset the other selected elements if
+						any</li>
+					<li><code>Escape</code>: reset selected elements</li>
+				</ul>
+				</p>
 				</ul>
 			</li>
 			<li><a id="template-variables">Template variables</a>
@@ -643,9 +746,11 @@
 			</li>
 			<li><a id="notes">Technical notes</a>
 				<ul>
-					<li>All images are converted into <a href="http://en.wikipedia.org/wiki/Base64">base64</a>. </li>
+					<li>All images are converted into <a href="http://en.wikipedia.org/wiki/Base64"
+							target="_blank">base64</a>. </li>
 					<li>All resources except frame contents are injected in the document using <a
-							href="http://en.wikipedia.org/wiki/Data_URI_scheme">data URI scheme</a>. </li>
+							href="http://en.wikipedia.org/wiki/Data_URI_scheme" target="_blank">data URI scheme</a>.
+					</li>
 					<li>Frame contents are injected as text in the document by using the srcdoc attribute. </li>
 				</ul>
 			</li>
@@ -739,9 +844,9 @@
 			</li>
 			<li><a id="icons">Icons</a>
 				<ul>
-					<li> Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup"
-							title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/"
-							title="Flaticon">www.flaticon.com</a> is licensed by <a
+					<li>Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup"
+							target="_blank">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon"
+							target="_blank">www.flaticon.com</a> is licensed by <a
 							href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
 							target="_blank">CC 3.0 BY</a> </li>
 				</ul>
