--- a/src/extension/ui/pages/help.html
+++ b/src/extension/ui/pages/help.html
@@ -803,7 +803,8 @@
 					<li>If restarting the browser did not fix the issue, try to disable all other extensions to see if
 						there is a conflict.</li>
 					<li>If there is a conflict then try to determine against which extension(s).</li>
-					<li>Please report the issue <a href="https://github.com/gildas-lormeau/SingleFileZ/issues">here</a>
+					<li>Please report the issue <a href="https://github.com/gildas-lormeau/SingleFileZ/issues"
+							target="_blank">here</a>
 						with a short description on how to reproduce it.</li>
 				</ul>
 				<p>Suggestions are welcome :)</p>
