--- a/src/extension/ui/pages/editor.html
+++ b/src/extension/ui/pages/editor.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="editor.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="color-scheme" content="light dark">
+	<link rel="icon" href="/src/extension/ui/resources/icon_128.png">
 	<title>Please wait...</title>
 </head>
 
