Fixed copy-paste bug.

--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -519,7 +519,7 @@
 							comma. SingleFileZ will ignore bookmarks added in folders that contains these names.
 						</p>
 					</li>
-					<li data-options-label="allowedBookmarkFoldersLabel"> <span class="option">Option: ignored
+					<li data-options-label="allowedBookmarkFoldersLabel"> <span class="option">Option: allowed
 							folders</span>
 						<p>Enter a list of bookmark folder names to allow. The folder names must be separated with a
 							comma. SingleFileZ will only save pages added in folders that contains these names.
