--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -36,7 +36,7 @@
 				<label for="shadowEnabledInput" id="shadowEnabledLabel"></label>
 				<input type="checkbox" id="shadowEnabledInput">
 			</div>
-			<div class="option">
+			<div class="option" id="displayInfobarOption">
 				<label for="displayInfobarInput" id="displayInfobarLabel"></label>
 				<input type="checkbox" id="displayInfobarInput">
 			</div>
@@ -69,11 +69,11 @@
 					</select>
 				</div>
 			</div>
-			<div class="option">
+			<div class="option" id="confirmFilenameOption">
 				<label for="confirmFilenameInput" id="confirmFilenameLabel"></label>
 				<input type="checkbox" id="confirmFilenameInput">
 			</div>
-			<div class="option">
+			<div class="option" id="filenameConflictAction">
 				<label for="filenameConflictActionInput" id="filenameConflictActionLabel"></label>
 				<select id="filenameConflictActionInput">
 					<option id="filenameConflictActionUniquifyLabel" value="uniquify"></option>
@@ -229,7 +229,7 @@
 				<label for="webDAVPasswordInput" id="webDAVPasswordLabel"></label>
 				<input type="password" id="webDAVPasswordInput" class="medium-input">
 			</div>
-			<div class="option">
+			<div class="option" id="saveToGDriveOption">
 				<label for="saveToGDriveInput" id="saveToGDriveLabel"></label>
 				<input type="radio" id="saveToGDriveInput" name="destinationInput">
 			</div>
@@ -314,7 +314,7 @@
 				<label for="maxResourceDelayInput" id="maxResourceDelayLabel"></label>
 				<input type="number" id="maxResourceDelayInput" min="1">
 			</div>
-			<div class="option">
+			<div class="option" id="passReferrerOnErrorOption">
 				<label for="passReferrerOnErrorInput" id="passReferrerOnErrorLabel"></label>
 				<input type="checkbox" id="passReferrerOnErrorInput">
 			</div>
@@ -343,12 +343,12 @@
 				<label for="openEditorInput" id="openEditorLabel"></label>
 				<input type="checkbox" id="openEditorInput">
 			</div>
-			<div class="option">
+			<div class="option" id="autoOpenEditorOption">
 				<label for="autoOpenEditorInput" id="autoOpenEditorLabel"></label>
 				<input type="checkbox" id="autoOpenEditorInput">
 			</div>
 		</details>
-		<details>
+		<details id="bookmarksOptions">
 			<summary id="bookmarksLabel"></summary>
 			<div class="option">
 				<label for="saveCreatedBookmarksInput" id="saveCreatedBookmarksLabel"></label>
@@ -367,7 +367,7 @@
 				<input type="text" id="allowedBookmarkFoldersInput">
 			</div>
 		</details>
-		<details>
+		<details id="autoSaveSection">
 			<summary id="autoSaveLabel"></summary>
 			<div class="option">
 				<label for="autoSaveLoadOrUnloadInput" id="autoSaveLoadOrUnloadLabel"></label>
@@ -404,7 +404,7 @@
 		</details>
 		<details>
 			<summary id="miscLabel"></summary>
-			<div class="option">
+			<div class="option" id="backgroundSaveOptions">
 				<label for="backgroundSaveInput" id="backgroundSaveLabel"></label>
 				<input type="checkbox" id="backgroundSaveInput">
 			</div>
@@ -458,7 +458,7 @@
 				<label for="showAllProfilesInput" id="showAllProfilesLabel"></label>
 				<input type="checkbox" id="showAllProfilesInput">
 			</div>
-			<div class="option">
+			<div class="option" id="showAutoSaveProfileOption">
 				<label for="showAutoSaveProfileInput" id="showAutoSaveProfileLabel"></label>
 				<input type="checkbox" id="showAutoSaveProfileInput">
 			</div>
