--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -206,11 +206,11 @@
 				<p>Infobar</p>
 				<ul>
 					<li data-options-label="displayInfobarLabel"> <span class="option">Option: display an infobar when
-						viewing a saved page</span>
-					<p>Check this option to display the ℹ button at the top right of the page when viewing a saved
-						page. By clicking this button, you can get more information about the saved date and open
-						the original URL.</p>
-					<p class="notice">It is recommended to <u>check</u> this option</p>
+							viewing a saved page</span>
+						<p>Check this option to display the ℹ button at the top right of the page when viewing a saved
+							page. By clicking this button, you can get more information about the saved date and open
+							the original URL.</p>
+						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
 					<li data-options-label="infobarTemplateLabel"> <span class="option">Option: template of the infobar
 							content</span>
@@ -873,10 +873,12 @@
 							profile</a>), kramola-RU (<a href="https://github.com/kramola-RU" target="_blank">GitHub
 							profile</a>), solokot (<a href="https://github.com/solokot" target="_blank">GitHub
 							profile</a>)</li>
-					<li>Ukrainian translation done by perdolka (<a href="https://github.com/perdolka"
-							target="_blank">GitHub profile</a>)</li>
 					<li>Spanish translation done by strel (<a href="https://github.com/strel" target="_blank">GitHub
 							profile</a>)</li>
+					<li>Turkish translation done by hbaklan943 (<a href="https://github.com/hbaklan943"
+							target="_blank">GitHub profile</a>)</li>
+					<li>Ukrainian translation done by perdolka (<a href="https://github.com/perdolka"
+							target="_blank">GitHub profile</a>), gildas-lormeau</li>
 				</ul>
 			</li>
 			<li><a id="icons">Icons</a>
