--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -17,7 +17,7 @@
 			<h4>Save a complete page into a single self-extracting HTML/ZIP file</h4>
 		</div> <span id="index"> <a href="#getting-started">Getting started</a> - <a href="#general-notes">Additional
 				notes</a> - <a href="#options">Options description</a> - <a href="#annotation-editor">Annotation
-				editor</a> - <a href="#notes">Technical notes</a> - <a href="#template-variables">Template variables</a>
+				editor</a> - <a href="#template-variables">Template variables</a>
 			- <a href="#known-issues">Known issues</a> - <a href="#unknown-issues">Troubleshooting unknown issues</a> -
 			<a href="#contributors">Contributors</a>
 		</span>
@@ -778,16 +778,6 @@
 					<li><code>{digest-sha-384}</code>: the SHA-384 hash value of the entire page content</li>
 					<li><code>{digest-sha-512}</code>: the SHA-512 hash value of the entire page content</li>
 					<li><code>{profile-name}</code>: the name of the profile used to save the page</li>
-				</ul>
-			</li>
-			<li><a id="notes">Technical notes</a>
-				<ul>
-					<li>All images are converted into <a href="http://en.wikipedia.org/wiki/Base64"
-							target="_blank">base64</a>. </li>
-					<li>All resources except frame contents are injected in the document using <a
-							href="http://en.wikipedia.org/wiki/Data_URI_scheme" target="_blank">data URI scheme</a>.
-					</li>
-					<li>Frame contents are injected as text in the document by using the srcdoc attribute. </li>
 				</ul>
 			</li>
 			<li><a id="known-issues">Known issues</a>
