add opt. `Annotation editor > display the infobar`

--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -514,11 +514,16 @@
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 					<li data-options-label="autoOpenEditorLabel"> <span class="option">Option: open the annotation
-							editor when viewing a page saved with SingleFileZ </span>
+							editor when viewing a page saved with SingleFileZ</span>
 						<p>Check this option to open the annotation editor when displaying a page saved by SingleFileZ.
 						</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
+					<li data-options-label="displayInfobarInEditorLabel"> <span class="option">Option:
+						display the infobar</span>
+						<p>Check this option to display the infobar when displaying a page in the annotation editor.</p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
+					</p>
 				</ul>
 				<p>Bookmarks</p>
 				<ul>
