--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -145,6 +145,10 @@
 						<p>Enter the maximum length of the filename (without the extension) and its unit (bytes or
 							characters).</p>
 					</li>
+					<li data-options-label="filenameReplacementCharacterLabel"> <span class="option">Option: replacement
+							character</span>
+						<p>Enter the character used to replace invalid characters in the filename.</p>
+					</li>
 					<li data-options-label="confirmFilenameLabel"> <span class="option">Option: open the "Save as"
 							dialog to confirm the file name</span>
 						<p>Check this option to display the "Save as" dialog in order to confirm the file name before
