--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -142,6 +142,10 @@
 				<input type="checkbox" id="selfExtractingArchiveInput">
 			</div>
 			<div class="option second-level">
+				<label for="extractDataFromPageInput" id="extractDataFromPageLabel"></label>
+				<input type="checkbox" id="extractDataFromPageInput">
+			</div>
+			<div class="option second-level">
 				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
 				<input type="checkbox" id="insertTextBodyInput">
 			</div>
