--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -277,7 +277,7 @@
 						<p>Check this option to insert the text content of the saved page into the self-extracting HTML
 							file. This makes it possible, for example, to search for pages from the text. Note that if
 							the option "add metadata to extract data from the page" is checked, the text content is
-							enriched in UTF-8 but the page is declared in ISO-8859-1.</p>
+							encoded in UTF-8 but the page is declared in ISO-8859-1.</p>
 						</p>
 					</li>
 					<li data-options-label="createRootDirectoryLabel"> <span class="option">Option: create a root
