--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -253,7 +253,7 @@
 				<ul>
 					<li data-options-label="passwordLabel"> <span class="option">Option: password</span>
 						<p>Type a password to encrypt zip files with AES-256 (compatible with Winzip). Be careful, if
-							you lose the password, it will be impossible to open the file. Enabling this otpion
+							you lose the password, it will be impossible to open the file. Enabling this option
 							increases the CPU consumption and the time needed to save or read a page.</p>
 						<p class="notice">It is recommended to <u>leave empty</u> this option</p>
 					</li>
