add option `open saved pages in a new tab` (fix #133)

--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -36,6 +36,10 @@
 				<label for="shadowEnabledInput" id="shadowEnabledLabel"></label>
 				<input type="checkbox" id="shadowEnabledInput">
 			</div>
+			<div class="option" id="openSavedPageOption">
+				<label for="openSavedPageInput" id="openSavedPageLabel"></label>
+				<input type="checkbox" id="openSavedPageInput">
+			</div>
 			<div class="option">
 				<label for="autoCloseInput" id="autoCloseLabel"></label>
 				<input type="checkbox" id="autoCloseInput">
