--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -109,6 +109,11 @@
 							resources. This reminds you that you should not close the tab. </p>
 						<p class="notice">It is recommended to <u>check</u> this option</p>
 					</li>
+					<li data-options-label="openSavedPageLabel" id="openSavedPageOption"> <span class="option">Option:
+							open saved pages in a new tab</span>
+						<p>Check this option to display the saved page in a new tab. This option can be useful, for
+							example, in order to check the page is properly saved.</p>
+					</li>
 					<li data-options-label="autoCloseLabel"> <span class="option">Option: auto-close the tab after the
 							page is saved</span>
 						<p>Check this option to automatically close the tab after saving the page displayed inside. </p>
