--- a/src/ui/pages/editor.html
+++ b/src/ui/pages/editor.html
@@ -67,9 +67,11 @@
 				draggable="false">
 		</div>
 	</div>
-	<iframe class="editor"
-		srcdoc="&lt;!DOCTYPE html&gt;&lt;body&gt;&lt;script src=/lib/single-file-extension-editor-helper.js&gt;&lt;/script&gt;&lt;script src=/lib/single-file-extension-editor.js&gt;&lt;/script&gt;&lt;script src=/src/lib/readability/Readability.js&gt;&lt;/script&gt;&lt;script src=/src/lib/readability/Readability-readerable.js&gt;&lt;/script&gt;&lt;/body&gt;"
-		sandbox="allow-scripts allow-modals allow-downloads"></iframe>
+	<div class="editor-container">
+		<iframe class="editor"
+			srcdoc="&lt;!DOCTYPE html&gt;&lt;body&gt;&lt;script src=/lib/single-file-extension-editor-helper.js&gt;&lt;/script&gt;&lt;script src=/lib/single-file-extension-editor.js&gt;&lt;/script&gt;&lt;script src=/src/lib/readability/Readability.js&gt;&lt;/script&gt;&lt;script src=/src/lib/readability/Readability-readerable.js&gt;&lt;/script&gt;&lt;/body&gt;"
+			sandbox="allow-scripts allow-modals allow-downloads"></iframe>
+	</div>
 	<script src="/lib/chrome-browser-polyfill.js"></script>
 	<script src="/lib/single-file.js"></script>
 	<script type="module" src="/src/ui/bg/ui-editor.js"></script>
