add option "do not append data after the ZIP data"

--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -291,6 +291,13 @@
 							encoded in UTF-8 but the page is declared in ISO-8859-1.</p>
 						</p>
 					</li>
+					<li data-options-label="preventAppendedDataLabel">
+						<span class="option">Option: do not append data after the ZIP data</span>
+						<p>Check this option to remove the data appended after the ZIP data. The resulting file may be
+							easier to open with some archive managers that do not support ZIP files with appended data.
+							Enabling this option increases the time needed to save a page.
+						</p>
+					</li>
 					<li data-options-label="createRootDirectoryLabel"> <span class="option">Option: create a root
 							directory</span>
 						<p>Check this option to create a root directory in the zip file. The directory name consists of
