--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -153,6 +153,10 @@
 				<label for="insertTextBodyInput" id="insertTextBodyLabel"></label>
 				<input type="checkbox" id="insertTextBodyInput">
 			</div>
+			<div class="option second-level">
+				<label for="preventAppendedDataInput" id="preventAppendedDataLabel"></label>
+				<input type="checkbox" id="preventAppendedDataInput">
+			</div>
 			<div class="option">
 				<label for="createRootDirectoryInput" id="createRootDirectoryLabel"></label>
 				<input type="checkbox" id="createRootDirectoryInput">
