add option "Destination > upload to Dropbox"

--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -172,8 +172,7 @@
 							is saved in the same directory as the original file when saving the page again.
 						</p>
 					</li>
-					<li data-options-label="confirmFilenameLabel"> <span
-							class="option">Option: open the "Save as"
+					<li data-options-label="confirmFilenameLabel"> <span class="option">Option: open the "Save as"
 							dialog to confirm the file name</span>
 						<p>Check this option to display the "Save as" dialog in order to confirm the file name before
 							saving the page. If the option "save pages in background" is unchecked then a prompt dialog
@@ -461,12 +460,19 @@
 					<li data-options-label="webDAVPasswordLabel"> <span class="option">Option: password</span>
 						<p>Enter your password.</p>
 					</li>
-					<li data-options-label="saveToGDriveLabel"> <span class="option">Option: upload to Google
-							Drive</span>
+					<li data-options-label="saveToGDriveLabel" id="saveToGDriveOption"> <span class="option">Option:
+							upload to Google Drive</span>
 						<p>Check this option to save the page on Google Drive.</p>
-						<p>The permissions requested by SingleFileZ allow it to access only to the files and folders it
-							has created. When you uncheck this option, SingleFileZ revokes automatically its access to
-							your Google Drive account. </p>
+						<p>The permissions requested by SingleFile allow it to access only to the files and folders it
+							has created. When you uncheck this option, SingleFile revokes automatically its access to
+							your Google Drive account.</p>
+						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
+					</li>
+					<li data-options-label="saveToDropboxLabel" id="saveToDropboxOption"> <span class="option">Option:
+							upload to Dropbox</span>
+						<p>Check this option to save the page on Dropbox.</p>
+						<p>The permissions requested by SingleFile allow it to access only to the files and folders it
+							has created.</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
 				</ul>
@@ -1093,11 +1099,11 @@
 					<li>Polish translation done by xesarni (<a href="https://github.com/xesarni" target="_blank">GitHub
 							profile</a>)
 					</li>
-					<li>Portuguese translation done by @Blackspirits (<a href="https://github.com/Blackspirit" 
-						target="_blank">GitHub profile</a>)
+					<li>Portuguese translation done by @Blackspirits (<a href="https://github.com/Blackspirit"
+							target="_blank">GitHub profile</a>)
 					</li>
-					<li>Portuguese-Brazilian translation done by @mezysinc, Blackspirits (<a href="https://github.com/Blackspirit" 
-						target="_blank">GitHub profile</a>)
+					<li>Portuguese-Brazilian translation done by @mezysinc, Blackspirits (<a
+							href="https://github.com/Blackspirit" target="_blank">GitHub profile</a>)
 					</li>
 					<li>Russian translation done by rstp14 (<a href="https://github.com/rstp14" target="_blank">GitHub
 							profile</a>), kramola-RU (<a href="https://github.com/kramola-RU" target="_blank">GitHub
