--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -270,6 +270,10 @@
 				<label for="saveToGDriveInput" id="saveToGDriveLabel"></label>
 				<input type="radio" id="saveToGDriveInput" name="destinationInput">
 			</div>
+			<div class="option" id="saveToDropboxOption">
+				<label for="saveToDropboxInput" id="saveToDropboxLabel"></label>
+				<input type="radio" id="saveToDropboxInput" name="destinationInput">
+			</div>
 		</details>
 		<details>
 			<summary id="networkLabel"></summary>
