add option `ZIP content > insert embedded image`

--- a/src/ui/pages/help.html
+++ b/src/ui/pages/help.html
@@ -312,6 +312,12 @@
 						</p>
 						<p class="notice">It is recommended to <u>uncheck</u> this option</p>
 					</li>
+					<li data-options-label="insertEmbeddedImageLabel">
+						<span class="option">Option: insert embedded images</span>
+						<p>Check this option to embed an image in ZIP files, making them compatible with the PNG format.
+							This image is displayed when the archive renamed as a PNG file is opened in an image viewer.
+						</p>
+					</li>
 				</ul>
 				<p>Stylesheets</p>
 				<ul>
