--- a/src/ui/pages/options.html
+++ b/src/ui/pages/options.html
@@ -165,6 +165,10 @@
 				<label for="createRootDirectoryInput" id="createRootDirectoryLabel"></label>
 				<input type="checkbox" id="createRootDirectoryInput">
 			</div>
+			<div class="option">
+				<label for="insertEmbeddedImageInput" id="insertEmbeddedImageLabel"></label>
+				<input type="checkbox" id="insertEmbeddedImageInput">
+			</div>
 		</details>
 		<details>
 			<summary id="stylesheetsLabel"></summary>
